# p4_aau_code

./: README.md
bin-picking/: CMakeLists.txt  main.cpp  move.py  package.xml  plot.py
bin-picking/src/: cv.hpp  features.hpp
